--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Eckhardt lab"
+title                    : "Eckhardt Lab"
 title_separator          : "-"
 name                     : &name "André K. Eckhardt"
 description              : &description "personal description"
@@ -109,13 +109,13 @@ author:
   google_plus      :
   keybase          :
   instagram        :
-  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
+  impactstory      : 
   lastfm           :
   linkedin         : "AKEckhardt"
   orcid            : "https://orcid.org/0000-0003-1029-9272"
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  stackoverflow    : 
   steam            :
   tumblr           :
   twitter          : "AKEckhardt"
