--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ analytics:
 author:
   name             : "André K. Eckhardt"
   avatar           : "ake.png"
-  bio              : "Liebig ECR Group Leader at RUB <br> <br><strong>Contact:</strong> <br> Ruhr-Universität Bochum <br> Lehrstuhl für Organische Chemie II <br> Universitätsstraße 150 <br> 44801 Bochum<br> NBCF03/498 <br> <br> Tel: +49 234 32 26239"
+  bio              : "Liebig ECR Group Leader at RUB <br> <br><strong>Contact:</strong> <br> Ruhr-Universität Bochum <br> Lehrstuhl für Organische Chemie II <br> Universitätsstraße 150 <br> 44801 Bochum<br> NBCF03/498 <br> <br> Tel: +49 234 32 26239 E-mail: Andre.Eckhardt[at]rub.de"
   location         : "Bochum, Germany"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=André+K.+Eckhardt"
