--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ author:
   name             : "André K. Eckhardt"
   avatar           : "ake.png"
   bio              : "Liebig ECR Group Leader<br> <br><strong>Contact:</strong> <br> Ruhr-Universität Bochum <br> Organische Chemie II <br> Universitätsstraße 150 <br> 44801 Bochum<br> NBCF03/498 <br> <br> Tel: +49 234 32 26239"
-  location         : "Bochum, Germany"
+  location         : 
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=André+K.+Eckhardt"
   googlescholar    : "https://scholar.google.de/citations?hl=de&user=r9CcyjcAAAAJ"
