--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-logo                     : "/images/RUB.png"
+logo: "/assets/images/RUB.png"
 title                    : "Eckhardt Lab"
 title_separator          : "-"
 name                     : &name "André K. Eckhardt"
