--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   - title: "Publications"
     url: /publications/
     
-#  - title: "Funding"
-#    url: /funding/
+  - title: "<a href="https://www.chemie.ruhr-uni-bochum.de/fak/lsag.html.de"><img src="/images/RUB.png" alt="Ruhr-Universität Bochum" width="48" height="48" align="middle"></a>"
+    url: https://www.chemie.ruhr-uni-bochum.de/fak/lsag.html.de
 
 #  - title: "Talks"
 #    url: /talks/    
