--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -31,48 +31,30 @@ main:
 #    url: /markdown/
 
 
-docs:
+group:
+  - title: AKE Group
+    url: /group/
+        
   - title: Group Leader
     children:
-      - title: "Quick-Start Guide"
-        url: /docs/quick-start-guide/
-      - title: "Structure"
-        url: /docs/structure/
-      - title: "Installation"
-        url: /docs/installation/
-      - title: "Upgrading"
-        url: /docs/upgrading/
+      - title: "André K. Eckhardt"
+        url: /cv/
 
   - title: PhD Students
     children:
-      - title: "Configuration"
-        url: /docs/configuration/
-      - title: "Navigation"
-        url: /docs/navigation/
-      - title: "UI Text"
-        url: /docs/ui-text/
-      - title: "Authors"
-        url: /docs/authors/
-      - title: "Layouts"
-        url: /docs/layouts/
+      - title: "PhD 1"
+        url: /group/PhD_1/
 
   - title: Students
     children:
-      - title: "Working with Posts"
-        url: /docs/posts/
-      - title: "Working with Pages"
-        url: /docs/pages/
-      - title: "Working with Collections"
-        url: /docs/collections/
-      - title: "Helpers"
-        url: /docs/helpers/
-      - title: "Utility Classes"
-        url: /docs/utility-classes/
+      - title: "Student 1"
+        url: /group/Student_1/
 
   - title: Alumni
     children:
-      - title: "Stylesheets"
-        url: /docs/stylesheets/
-      - title: "JavaScript"
-        url: /docs/javascript/
+      - title: "PhD 1"
+        url: /group/PhD_1/
+
+
+
 
