--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -31,9 +31,8 @@ main:
 #    url: /markdown/
 
 
-group:
+docs:
   - title: AKE Group
-    url: /group/
         
   - title: Group Leader
     children:
