--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -43,17 +43,17 @@ docs:
   - title: PhD Students
     children:
       - title: "PhD 1"
-        url: /docs/PhD_1/
+        url: /docs/phd1/
 
   - title: Students
     children:
       - title: "Student 1"
-        url: /docs/Student_1/
+        url: /docs/student/
 
   - title: Alumni
     children:
       - title: "Alumni 1"
-        url: /docs/Alumni_1/
+        url: /docs/alumni/
 
 
 
