--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -72,6 +72,13 @@ pubs:
       - title: "2018"
         url: /publications/#2018
         
-        
-        
+res:
+  - title: Astro- and Prebiotic Chemistry     
+    url: /publications/#Astro
+  - title: Chemical Reactivity and Physical (In)Organic Chemistry
+    url: /publications/#Reactivity
+  - title: Reactive Intermediates and Matrix Isolation Spectroscopy    
+    url: /publications/#Matrix
+  - title: Phosphorus Chemistry
+    url: /publications/#31P
         
