--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=André+K.+Eckhardt"
   googlescholar    : "https://scholar.google.de/citations?hl=de&user=r9CcyjcAAAAJ"
   email            : "Andre.Eckhardt@rub.de"
-  researchgate     : "http://researchgate.net/profile/Andre_Eckhardt"
+  researchgate     : "https://researchgate.net/profile/Andre_Eckhardt"
   uri              :
   bitbucket        :
   codepen          :
@@ -258,14 +258,14 @@ defaults:
 # Sass/SCSS
 sass:
   sass_dir: _sass
-  style: compressed # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
+  style: compressed # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
 
 
 # Outputting
 permalink: /:categories/:title/
 # paginate: 5 # amount of posts to show
 # paginate_path: /page:num/
-timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: America/Los_Angeles # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins
@@ -314,7 +314,7 @@ tag_archive:
 
 
 # HTML Compression
-# - http://jch.penibelst.de/
+# - https://jch.penibelst.de/
 compress_html:
   clippings: all
   ignore:
