--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -38,7 +38,7 @@ docs:
   - title: Group Leader
     children:
       - title: "André K. Eckhardt"
-        url: /cv/
+        url: /akegroup/ake/
 
   - title: PhD Students
     children:
