--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -60,6 +60,8 @@ docs:
 pubs:
   - title: Publications     
     url: /publications/
+  - title: "2023"
+    url: /publications/#2023
   - title: "2022"
     url: /publications/#2022
   - title: "2021"
