--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -49,7 +49,9 @@ docs:
     children:
       - title: "Viktor Paczelt"
         url: /akegroup/ViktorPaczelt/
-
+      - title: "Luciana Herbeck"
+        url: /akegroup/LucianaHerbeck/
+        
 #  - title: Alumni
 #    children:
 #      - title: "Alumni 1"
