--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -51,6 +51,8 @@ docs:
         url: /akegroup/ViktorPaczelt/
       - title: "Luciana Herbeck"
         url: /akegroup/LucianaHerbeck/
+      - title: "Adam Hasso"
+        url: /akegroup/AdamHasso/
         
 #  - title: Alumni
 #    children:
