--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -54,6 +54,12 @@ docs:
       - title: "Adam Hasso"
         url: /akegroup/AdamHasso/
         
+  - title: Visiting Students
+    children:
+      - title: "Shubham Sawle"
+        url: /akegroup/ShubhamSawle/
+
+        
 #  - title: Alumni
 #    children:
 #      - title: "Alumni 1"
