--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -54,7 +54,7 @@ docs:
         
   - title: Visiting Students
     children:
-      - title: "Donal O Donnell"
+      - title: "Dónal O'Donnell"
         url: /akegroup/DonalODonnell/
       - title: "Shubham Sawle"
         url: /akegroup/ShubhamSawle/
