--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -51,6 +51,8 @@ docs:
     children:
       - title: "Alexander Swienty"
         url: /akegroup/AlexanderSwienty/
+      - title: "Julian Eßer"
+        url: /akegroup/JulianEßer/      
         
 #  - title: Visiting Students
 #    children:
