--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -53,6 +53,8 @@ docs:
         url: /akegroup/AlexanderSwienty/
       - title: "Julian Eßer"
         url: /akegroup/JulianEßer/      
+      - title: "Kristin Wulff"
+        url: /akegroup/KristinWulff/   
         
   - title: Visiting Students
     children:
