--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -69,6 +69,8 @@ docs:
 pubs:
   - title: Publications     
     url: /publications/
+  - title: "2024"
+    url: /publications/#2024
   - title: "2023"
     url: /publications/#2023
   - title: "2022"
