--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -55,6 +55,8 @@ docs:
         url: /akegroup/JulianEßer/      
       - title: "Kristin Wulff"
         url: /akegroup/KristinWulff/   
+      - title: "Shahid Iqbal"
+        url: /akegroup/ShahidIqbal/
         
 #  - title: Visiting Students
 #    children:
