--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ google_analytics: G-JL35JRTRW3
 author:
   name             : "André K. Eckhardt"
   avatar           : "ake.png"
-  bio              : "Emmy-Noether Research Group Leader"
+  bio              : "Emmy Noether Research Group Leader"
   location         : "<strong>Contact:</strong> <br> Ruhr-Universität Bochum <br> Organische Chemie II <br> Universitätsstraße 150 <br> 44801 Bochum<br> NC3/173 <br> <br> Tel: +49 234 32 26239"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=André+K.+Eckhardt"
