--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -62,10 +62,10 @@ docs:
     children:
       - title: "Julian Eßer"
         url: /akegroup/JulianEßer/      
+      - title: "Dilara Korkut"
+        url: /akegroup/DilaraKorkut/  
       - title: "Daniel Kühn"
-        url: /akegroup/DanielKuehn/ 
-      - title: "Martyna Rybka"
-        url: /akegroup/MartynaRybka/        
+        url: /akegroup/DanielKuehn/   
       - title: "Kristin Wulff"
         url: /akegroup/KristinWulff/           
 #  - title: Visiting Students
