--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -83,6 +83,8 @@ docs:
 pubs:
   - title: Publications     
     url: /publications/
+  - title: "2025"
+    url: /publications/#2025
   - title: "2024"
     url: /publications/#2024
   - title: "2023"
