--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   github           : 
   google_plus      :
   keybase          :
-  instagram        :
+  instagram        : "eckhardtlab_astrochem"
   impactstory      : 
   lastfm           :
   linkedin         : "AKEckhardt"
