--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -71,7 +71,7 @@ docs:
   - title: Visiting Students
     children:
       - title: "Moulay Driss Mellaoui"
-#        url: /akegroup/MoulayDrissMellaoui/
+        url: /akegroup/MoulayDrissMellaoui/
         
   - title: Alumni
     children:
