--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -66,8 +66,8 @@ docs:
         url: /akegroup/DilaraKorkut/  
       - title: "Daniel Kühn"
         url: /akegroup/DanielKuehn/
-      - title: "Anna Marjanovic"
-        url: /akegroup/AnnaMarjanovic/         
+      - title: "Dominik Schreiner"
+        url: /akegroup/Dominik Schreiner/         
       - title: "Kristin Wulff"
         url: /akegroup/KristinWulff/        
 #  - title: Visiting Students
