--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -67,7 +67,7 @@ docs:
       - title: "Daniel Kühn"
         url: /akegroup/DanielKuehn/
       - title: "Dominik Schreiner"
-        url: /akegroup/Dominik Schreiner/         
+        url: /akegroup/DominikSchreiner/         
       - title: "Kristin Wulff"
         url: /akegroup/KristinWulff/        
 #  - title: Visiting Students
