--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -46,6 +46,8 @@ docs:
         url: /akegroup/AdrianPortelaGonzalez/
       - title: "Mika Maehara"
         url: /akegroup/MikaMaehara/
+      - title: "Anita Schneiker"
+        url: /akegroup/AnitaSchneiker/
       - title: "Christian Thiehoff"
         url: /akegroup/ChristianThiehoff/
 
