--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -81,7 +81,8 @@ docs:
             
 #  - title: Visiting Students
 #    children:
-#      - title: "Visiting students"
+#      - title: "Soham Chowdhury"
+	 url: /akegroup/SohamChowdhury/ 
         
   - title: Alumni
     children:
